fix button alignment of quiz show page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -231,3 +231,7 @@ a.nav-link:hover {
  margin-top: 40px;
  
 }
+
+#fix-align {
+  margin-right: -65px;
+}
